--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log
 
 # IDEs and editors
 .idea/
-.project
+.project/
 .classpath
 .c9/
 *.launch
@@ -22,10 +22,10 @@ yarn-error.log
 
 # Visual Studio Code
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+#!.vscode/settings.json
+#!.vscode/tasks.json
+#!.vscode/launch.json
+#!.vscode/extensions.json
 .history/*
 
 # Miscellaneous
